<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine"
            style="@style/topStyle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorgray1"
            android:id="@+id/relativeLayout"
            android:layout_below="@+id/top_bookname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"></RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:src="@mipmap/hand" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_no"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/top_bookname"
            android:layout_marginTop="20dp"
            android:background="@color/gray_bg1"></RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/books"
        android:visibility="gone"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/book1"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:id="@+id/imageView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mybook"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView3" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1"
            android:src="@mipmap/right"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/integral"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/jifen"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:id="@+id/imageView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myintegral"
            android:textSize="15sp"
            android:id="@+id/textView1"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView2" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/my_downlond"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/download"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:id="@+id/imageView21" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mydownlond"
            android:textSize="15sp"
            android:id="@+id/textView11"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView21" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/set"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/set"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:id="@+id/imageView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView4" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>


</LinearLayout>
